syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "xrf197ilz35aq2/gen/go/service/v1";

service BidService {
  rpc CreateBid(CreateBidRequest) returns (CreateBidResponse) {}
}

message CreateBidRequest {
  int32 amount = 1;
  string symbol = 2;
  int32 quantity = 3;
  string asset_id = 4;
  string asset_owner = 5;
  google.protobuf.Timestamp last_until = 7;
}

message CreateBidResponse {
  bool created = 1;
  string bid_id = 2;
  bool is_accepted = 3;
  string session_id = 4;
}
